@@ -1,3 +1,7 @@
+2006-08-24  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* lily/source-file.cc (Source_file): use copy(). Remove contents_str0()
+
 2006-08-24  Graham Percival  <gpermus@gmail.com>
 
 	* Documentation/user/changing-defaults.itely, global.itely,
@@ -5,7 +9,8 @@
 
 2006-08-23  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
-	* buildscripts/mutopia-index.py (allfiles): filter lily-XXX and snippet-map
+	* buildscripts/mutopia-index.py (allfiles):  filter  lily-XXX and
+	snippet-map
 
 	* scm/define-context-properties.scm
 	(translator-property-description): robustness: detect type errors
